# bubichain-v3

./: .travis.yml  ChangeLog.txt  LICENSE  README.md  appveyor.yml  test1.txt
docs/: develop.md  manual.md  布比区块链开发文档.html  布比区块链开发文档.md  测试说明.docx  跨链转移资产介绍.pptx
docs/cross_chain/: Dev_Manual_CN.md  ReadMe.md  TransferAssetAcrossChain.pptx  cross_asset.js  cross_comm.js
src/: CMakeLists.txt
src/api/: web_server.cpp  web_server.h  web_server_command.cpp  web_server_helper.cpp  web_server_query.cpp  web_server_update.cpp  websocket_server.cpp  websocket_server.h
src/ca/: main.cpp  manager.cpp
src/common/: argument.cpp  argument.h  ca.cpp  ca_manager.cpp  ca_manager.h  cfca.cpp  cfca.h  configure_base.cpp  configure_base.h  daemon.cpp  daemon.h  data_secret_key.cpp  general.cpp  general.h  network.cpp  network.h  private_key.cpp  private_key.h  storage.cpp  storage.h
src/consensus/: consensus.cpp  consensus.h  consensus_manager.cpp  consensus_manager.h  consensus_msg.cpp  consensus_msg.h  pbft.cpp  pbft.h  pbft_instance.cpp  pbft_instance.h
src/cross/: CMakeLists.txt  cross_chain_mgr.cpp  cross_chain_mgr.h  cross_utils.cpp  cross_utils.h  message_channel.cpp  message_channel.h
src/glue/: glue_manager.cpp  glue_manager.h  ledger_upgrade.cpp  ledger_upgrade.h  transaction_set.cpp  transaction_set.h
src/ledger/: account.cpp  account.h  contract_manager.cpp  contract_manager.h  electionContract.js  environment.cpp  environment.h  fees-voting.js  kv_trie.cpp  trie.h  (+12 more)
src/notary/: CMakeLists.txt  configure.cpp  configure.h  main.cpp  notary_mgr.cpp  notary_mgr.h
(+81 files in other folders)
